--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Jia Guo"
 output: 
-  html_document
+  html_document:
+    includes:
+       in_header: analytics_head.html
 ---
 
 <link rel="stylesheet" href="academicons.css"/>
@@ -34,7 +36,7 @@ Ph.D. candidate
 [Department of Biostatistics](http://www.mailman.columbia.edu/academics/departments/biostatistics)  
 [Columbia University Mailman School of Public Health](http://www.mailman.columbia.edu)  
 722 West 168th Street, New York, NY 10032  
-jg3780@cumc.columbia.edu
+jg3780@columbia.edu
 </p>
 
 
