--- a/publications.Rmd
+++ b/publications.Rmd
@@ -13,9 +13,11 @@ output:
 
 <p>
 
-* Schiff, C. S., Zur, K. B., Biggs, L. M., __Guo, J.__, & Pitman, M. J. (2019). Pediatricians’ proficiency in the care of the dysphonic child. The Laryngoscope, 129(8), 1756-1762.
+* Schiff, C. S., Zur, K. B., Biggs, L. M., __Guo, J.__, & Pitman, M. J. (2019). Pediatricians’ proficiency in the care of the dysphonic child. _The Laryngoscope, 129_(8), 1756-1762.
 
-* Galfalvy, H., __Guo, J.__, Keilp, J., Stanley, B., Oquendo, M., & Mann, J. J. (2018). F111. Multiple Pathways to Suicidal Behavior: Genetic and Neurocognitive Differences Between Suicide Attempters With High and Low Aggression-Impulsivity and Non-Attempters. Biological Psychiatry, 83(9), S280-S281.
+* Durham, T., Margolis, A., Pagliaccio, D., Garcia, W., Riley, K. W., __Guo, J.__, Wang, S., Peterson, B., Rauh, V., & Herbstman J. (2019). Self-perceived neighborhood quality and children's depression symptoms in a gentrifying Northern Manhattan. _International Journal of Child Health and Human Development, 12_(4), 413-424.
+
+* Galfalvy, H., __Guo, J.__, Keilp, J., Stanley, B., Oquendo, M., & Mann, J. J. (2018). F111. Multiple Pathways to Suicidal Behavior: Genetic and Neurocognitive Differences Between Suicide Attempters With High and Low Aggression-Impulsivity and Non-Attempters. _Biological Psychiatry, 83_(9), S280-S281.
 
 </p>
 
