--- a/about.Rmd
+++ b/about.Rmd
@@ -18,51 +18,64 @@ output:
 
 <!-- Item 1 -->
 <li>
+<div class="direction-r">
+<div class="flag-wrapper">
+<span class="flag">Roche</span>
+<span class="time-wrapper"><span class="time">January 2021 - present</span></span>
+</div>
+<img src="images/Roche_white.png" style="width:20%">
+
+<div class="desc">I currently work as a Data Science Intern at [Roche](https://www.roche.com).</div>
+</div>
+</li>
+
+<!-- Item 2 -->
+<li>
 <div class="direction-l">
 <div class="flag-wrapper">
 <span class="flag">Columbia University</span>
 <span class="time-wrapper"><span class="time">September 2018 - present</span></span>
 </div>
-<img src="images/columbia_white.png" style="width:14%">
+<img src="images/columbia_white.png" style="width:18%">
 
-<div class="desc">Currently I'm pursuing a Ph.D. in Biostatistics. Advised by [Dr. Shuang Wang](http://www.columbia.edu/~sw2206/), my research focused on applications of deep learning for electronic health record (EHR) data analysis.</div>
+<div class="desc">I'm pursuing a Ph.D. in Biostatistics, advised by [Dr. Shuang Wang](http://www.columbia.edu/~sw2206/). My research focused on applications of Deep Learning for electronic health record (EHR) data analysis.</div>
 </div>
 </li>
 
-<!-- Item 2 -->
+<!-- Item 3 -->
 <li>
 <div class="direction-r">
 <div class="flag-wrapper">
 <span class="flag">MediaMath</span>
 <span class="time-wrapper"><span class="time">Summer 2018</span></span>
 </div>
-<img src="images/mediamath.png" style="width:16%">
+<img src="images/mediamath.png" style="width:20%">
 
-<div class="desc">I previously worked as an Engineer Intern developing machine learning projects at [MediaMath](http://www.mediamath.com).</div>
+<div class="desc">I previously worked as an Engineer Intern developing machine learning projects at [MediaMath](https://www.mediamath.com).</div>
 </div>
 </li>
 
-<!-- Item 3 -->
+<!-- Item 4 -->
 <li>
 <div class="direction-l">
 <div class="flag-wrapper">
 <span class="flag">Columbia University</span>
 <span class="time-wrapper"><span class="time">2016 - 2018</span></span>
 </div>
-<img src="images/columbia_white.png" style="width:14%">
+<img src="images/columbia_white.png" style="width:18%">
 
 <div class="desc">I received a M.S. in Biostatistics with a concentration on Statitical Genetics at Columbia University.</div>
 </div>
 </li>
 
-<!-- Item 4 -->
+<!-- Item 5 -->
 <li>
 <div class="direction-r">
 <div class="flag-wrapper">
 <span class="flag">Sun Yat-sen University</span>
 <span class="time-wrapper"><span class="time">2012 - 2016</span></span>
 </div>
-<img src="images/SYSU_white.png" style="width:13%">
+<img src="images/SYSU_white.png" style="width:17%">
 
 <div class="desc">I completed my B.S. in Mathematics at Sun Yat-sen University, Guangzhou, China.</div>
 </div>
