--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,7 @@ output:
 <p align="left"> </p>
 
 
-<p align="left">I'm a third-year Ph.D. student in Biostatistics at Columbia University Mailman School of Public Health. My research focused on deep learning, natural language processing (NLP), electronic health record (EHR) data, and statistical genetics. [More about me.](about.html)</p>
+<p align="left">I'm a third-year Ph.D. student in Biostatistics at Columbia University Mailman School of Public Health. My research focused on Deep Learning, natural language processing (NLP), electronic health record (EHR) data, and statistical genetics. [More about me.](about.html)</p>
 
 
 <!--
