--- a/publications.Rmd
+++ b/publications.Rmd
@@ -13,6 +13,8 @@ output:
 
 <p>
 
+<!-- * Wang, Y., Perera, F., __Guo, J.__, Wheelock, K., Durham, T., Ross, Z., Ananth, C. V., Baccarelli, A., Wang, S., & Herbstman, J. (in press). A methodological pipeline to generate an epigenetic marker of prenatal exposure to air pollution indicators. _Epigenetics_. -->
+
 * Schiff, C. S., Zur, K. B., Biggs, L. M., __Guo, J.__, & Pitman, M. J. (2019). Pediatricians’ proficiency in the care of the dysphonic child. _The Laryngoscope, 129_(8), 1756-1762.
 
 * Durham, T., Margolis, A., Pagliaccio, D., Garcia, W., Riley, K. W., __Guo, J.__, Wang, S., Peterson, B., Rauh, V., & Herbstman J. (2019). Self-perceived neighborhood quality and children's depression symptoms in a gentrifying Northern Manhattan. _International Journal of Child Health and Human Development, 12_(4), 413-424.
