--- a/about.Rmd
+++ b/about.Rmd
@@ -25,7 +25,7 @@ output:
 </div>
 <img src="images/Roche_white.png" style="width:20%">
 
-<div class="desc">I currently work as a Data Science Intern at [Roche](https://www.roche.com).</div>
+<div class="desc">I currently work as a Data Scientist Intern at [Roche](https://www.roche.com).</div>
 </div>
 </li>
 
